--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BX'
 - !lcsh 'Calvinism -- Controversial literature'
+- GITenberg
 title: A Solemn Caution Against the Ten Horns of Calvinism
 url: http://www.gutenberg.org/ebooks/28172
